Start to use LESS

--- a/less/position.less
+++ b/less/position.less
@@ -17,16 +17,18 @@ header,
 	padding: 0px;
 }
 
-header #logo {
-	height: 65px;
-	padding: 1em;
-}
-header #social_media {
-	border: none;
-	overflow: hidden;
-	width: 85px;
-	height: 20px;
-	float: right;
+header {
+	#logo {
+		height: 65px;
+		padding: 1em;
+	}
+	#social_media {
+		border: none;
+		overflow: hidden;
+		width: 85px;
+		height: 20px;
+		float: right;
+	}	
 }
 header ul,
 footer ul {
