--- a/less/personal.less
+++ b/less/personal.less
@@ -1,22 +1,16 @@
-@images: '../images';
-@background-color-main: #FFFFFF;
-@color-orange: #FF9900;
-@color-dark-grey: #666666;
-@color-dark-blue: #3F58BC;
-
 body {
 	background-image:  url('@{images}/background.gif');
 	font-family: Verdana, Helvetica, Sans-Serif, Arial;
 	font-size: 0.75em;
 }
 #container {
-	border: 3px solid @color-dark-grey;
-	background: @color-dark-blue url('@{images}/leftphoto.jpg') no-repeat left bottom;
+	border: 3px solid @color-grey-dark;
+	background: @color-blue url('@{images}/leftphoto.jpg') no-repeat left bottom;
 }
 header {
 	#logo {
 		background: @background-color-main url('@{images}/logo.png') left top;
-		border-bottom: 6px solid @color-orange;
+		border-bottom: 6px solid @color-orange-dark;
 	}
 	
 	ul {
@@ -29,7 +23,6 @@ header {
 }
 footer {
 	background-color: @background-color-main;
-	color: @color-dark-grey;
-	border-top: 1px solid #CCCCCC;
+	color: @color-grey-dark;
+	border-top: 1px solid @color-grey-light;
 }
-
