--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@ Theme Name: MT Theme
 Author: Xennis
 Description: WordPress Design of MiRo's Truckstop
 Version: 1.0
-Text Domain: mtTheme
+Text Domain: mt-wp-theme
 */
 @import url('css/style.css');
