Add css style for the classes set by WP editor

--- a/less/style.less
+++ b/less/style.less
@@ -14,6 +14,7 @@
 @color-grey-light: #CCCCCC;
 @color-grey-dark: #666666;
 
+@import "wordpress-core";
 @import "position";
 @import "personal";
 @import "images";
